<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.example.thequeen.font.QueenFont"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#F7F7F7">

            <ImageView
                    android:id="@+id/queen_logo_iv"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:src="@drawable/splash_icn"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <EditText
                    android:id="@+id/mobile_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="48dp"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="64dp"
                    android:maxLines="1"
                    android:inputType="number"
                    android:gravity="center"
                    android:padding="16dp"
                    android:hint="@string/number_hint"
                    android:background="@drawable/edit_text_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/queen_logo_iv"
                    app:typeface="@{QueenFont.ARABIC_FONT}"
            />

            <EditText
                    android:id="@+id/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:padding="16dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:gravity="center"
                    android:maxLines="1"
                    android:background="@drawable/edit_text_bg"
                    app:layout_constraintEnd_toEndOf="@id/mobile_number"
                    app:layout_constraintStart_toStartOf="@id/mobile_number"
                    app:layout_constraintTop_toBottomOf="@id/mobile_number"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:typeface="@{QueenFont.ARABIC_FONT}"/>

            <TextView
                    android:id="@+id/login_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:padding="16dp"
                    android:text="@string/login"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/edit_text_green_gb"
                    app:layout_constraintEnd_toEndOf="@id/password"
                    app:layout_constraintStart_toStartOf="@id/password"
                    app:layout_constraintTop_toBottomOf="@id/password"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:typeface="@{QueenFont.ARABIC_FONT}"/>

            <ProgressBar
                    android:id="@+id/loading_pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>