<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.example.thequeen.font.QueenFont"/>
        <variable name="product" type="com.example.thequeen.features.home.Product"/>
        <variable name="image" type="String"/>
    </data>
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:background="@android:color/white">
        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".features.home.secondStepActivity.SecondStepActivity">

            <TextView
                    android:id="@+id/home_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="التفاصيل"
                    android:textSize="24sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:typeface="@{QueenFont.ARABIC_FONT}"/>

            <android.support.v4.view.ViewPager
                    android:id="@+id/colors_rcl"
                    android:layout_width="wrap_content"
                    android:layout_height="300dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_tv"
                    app:layout_constraintHorizontal_bias="0.5"/>

            <com.yarolegovich.discretescrollview.DiscreteScrollView
                    android:id="@+id/discrete_scroll_view"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:dsv_orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_tv"
            />

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/cloth_rcl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@id/colors_rcl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                    android:id="@+id/dress_name_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@{product.name}"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    tools:text="bla bla "
                    android:textColor="@android:color/white"
                    android:background="#1d1a1c"
                    app:typeface="@{QueenFont.ARABIC_FONT}"
                    app:layout_constraintTop_toBottomOf="@id/cloth_rcl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <android.support.v7.widget.RecyclerView
                    android:id="@+id/color_rcl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toBottomOf="@id/dress_name_tv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    android:id="@+id/name_ed"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/name"
                    android:background="@drawable/edit_text_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/color_rcl"
                    app:typeface="@{QueenFont.ARABIC_FONT}"
            />

            <EditText
                    android:id="@+id/address_ed"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/address"
                    android:background="@drawable/edit_text_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_ed"
                    app:typeface="@{QueenFont.ARABIC_FONT}"
            />

            <EditText
                    android:id="@+id/mobile_ed"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:hint="@string/number_hint"
                    android:background="@drawable/edit_text_bg"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/address_ed"
                    app:typeface="@{QueenFont.ARABIC_FONT}"
            />

            <TextView
                    android:id="@+id/signature"
                    android:layout_width="383dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="28dp"
                    android:maxLines="1"
                    android:inputType="text"
                    android:gravity="center"
                    android:padding="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    android:text="توقيع"
                    android:visibility="visible"
                    android:background="#E4E4E4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobile_ed"
                    app:layout_constraintBottom_toTopOf="@id/confirm_btn"
                    app:typeface="@{QueenFont.ARABIC_FONT}"
            />

            <ImageView
                    android:id="@+id/signature_iv"
                    android:layout_width="383dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="28dp"
                    android:maxLines="1"
                    android:scaleType="fitXY"
                    android:gravity="center"
                    android:visibility="gone"
                    android:padding="8dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mobile_ed"
                    app:layout_constraintBottom_toTopOf="@id/confirm_btn"
            />


            <Button
                    android:id="@+id/confirm_btn"
                    android:layout_width="383dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="تأكيد الطلب"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_marginBottom="16dp"
                    android:textColor="@android:color/white"
                    android:background="@drawable/edit_text_green_gb"
                    app:typeface="@{QueenFont.ARABIC_FONT}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <ProgressBar
                    android:id="@+id/loading_pb"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>